# coffeegrindsize

./: coffeegrindsize.py  coffeegrindsize.spec  pyproject.toml
.github/workflows/: build.yml
build_tools/: fix_info_plist.py  mac_run_pyi  run_pyi.bat
